--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     </head>
     <body>
         <div>
-            <p>let s = new Ranges()</p>
-            <p>s.add([15, 17])</p>
-            <p>s.print()</p>
-            
+            <h1>Задание готово к выполнению в консоли</h1>
+            <p>Можно скопировать текст из задания или вводить другие данные</p>
         </div>
     </body>
 </html>
